tdf#68364 - Don't assume a database if only two dots are present

Additionally, a database table name (database.table.column) has to
be retrieved from the database to be valid.

Change-Id: I8949ae61d96043412425d634763d2ea33ce6a0f3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160910
Tested-by: Jenkins
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>
(cherry picked from commit 74f25206bc5a1a36b85683555cb27179e5da3275)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/161094
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>